fixation bug version mobile

--- a/css/passion.css
+++ b/css/passion.css
@@ -187,7 +187,7 @@ footer {
 
     #passion {
         margin: 1rem 0.5rem;
-        padding: 3rem 1.5rem;
+        padding: 5rem 1.5rem 3rem 1.5rem;
         border-radius: 15px;
     }
 
@@ -224,7 +224,7 @@ footer {
 
     #passion {
         margin: 0.5rem;
-        padding: 2rem 1rem;
+        padding: 4.5rem 1rem 2rem 1rem;
         border-radius: 10px;
     }
 
@@ -272,7 +272,7 @@ footer {
     }
 
     #passion {
-        padding: 1.5rem 0.8rem;
+        padding: 4rem 0.8rem 1.5rem 0.8rem;
     }
 
     #passion h2 {
