--- a/css/projets.css
+++ b/css/projets.css
@@ -132,8 +132,7 @@ nav a:hover::before {
 #projects {
     padding: 4rem 2rem;
     max-width: 1400px;
-    margin-left: 3%;
-    margin-right: 3%;
+    margin: 2rem auto 0;
     background: rgba(255, 255, 255, 0.9);
     border-radius: 20px;
     margin-top: 2rem;
